feat: expose data quality object count endpoints BED-8527
