# packages/go/openapi/src/openapi.yaml
@@ -614,6 +614,12 @@ paths:
     $ref: './paths/data-quality.azure-tenants.id.data-quality-stats.yaml'
   /api/v2/platform/{platform_id}/data-quality-stats:
     $ref: './paths/data-quality.platform.id.data-quality-stats.yaml'
+  /api/v2/data-quality/source-object-counts:
+    $ref: './paths/data-quality.source-object-counts.yaml'
+  /api/v2/data-quality/source-object-counts/summary:
+    $ref: './paths/data-quality.source-object-counts.summary.yaml'
+  /api/v2/data-quality/environment-object-counts:
+    $ref: './paths/data-quality.environment-object-counts.yaml'
   /api/v2/clear-database:
     $ref: './paths/data-quality.clear-database.yaml'
 
